# clap-family

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  PUBLISH.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
clap_family/: __init__.py  admissible.py  baselines.py  constants.py  fields.py  geometry.py  lapse.py  metrics.py  params.py
clap_family/envs/: base_env.py  hard_env.py  three_region.py  transition_error_env.py
clap_family/experiments/: reproduce.py
clap_family/solver/: cem_mpc.py  project.py
clap_family/torch/: __init__.py  hf.py  lightning.py  regularizer.py  rl.py
clap_family/variants/: a_clap.py  adaptive_du.py  aliases.py  base.py  clap.py  du_clap.py  learned_gate.py  phase_adaptive.py  rrla.py
docs/: REPRODUCIBILITY.md
examples/: quickstart.py  reproduce_paper.py  torch_world_model_reg.py
scripts/: make_readme_figures.py
tests/: conftest.py  test_a_clap.py  test_adaptive_du.py  test_admissible.py  test_aliases.py  test_api_surface.py  test_base_action.py  test_cem_mpc.py  test_clap_variant.py  test_concentration.py  test_du_clap.py  test_envs.py  test_fields.py  test_geometry.py  test_lapse.py  test_learned_gate.py  test_metrics.py  test_params.py  test_phase_adaptive.py  test_project.py  test_reproduce.py  test_rrla.py  test_theorem_contract.py  test_torch_adapters.py  test_torch_regularizer.py
