[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clap_family"
version = "0.1.0"
description = "Conservative Lapse-Action Planning (CLAP): a variational access-and-dwell framework for safe latent trajectory optimization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rishabh Patil" }]
keywords = ["safe-reinforcement-learning", "model-based-planning", "trajectory-optimization",
            "ai-safety", "model-predictive-control", "latent-dynamics", "regularization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
torch = ["torch>=2.0"]
lightning = ["torch>=2.0", "lightning>=2.0"]
hf = ["torch>=2.0", "transformers>=4.30"]
rl = ["torch>=2.0", "gymnasium>=0.29", "stable-baselines3>=2.0"]
plots = ["matplotlib>=3.5"]
dev = ["pytest>=7", "pytest-cov", "ruff", "build", "twine"]
all = ["torch>=2.0", "lightning>=2.0", "transformers>=4.30", "gymnasium>=0.29",
       "stable-baselines3>=2.0", "matplotlib>=3.5"]

[project.urls]
Homepage = "https://github.com/MrRobotop/clap-family"
Repository = "https://github.com/MrRobotop/clap-family"

[tool.hatch.build.targets.wheel]
packages = ["clap_family"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error::RuntimeWarning"]
markers = ["slow: longer-running behavioural/integration tests"]
